--- a/index.html
+++ b/index.html
@@ -6,39 +6,21 @@
         <title>COVID-19 Confirmed Cases wit Kepler.gl</title>
 
         <!--Uber Font-->
-        <link rel="stylesheet" href="https://d1a3f4spazzrp4.cloudfront.net/kepler.gl/uber-fonts/4.0.0/superfine.css">
+        <link rel="stylesheet" href="css/superfine.css">
 
         <!--MapBox css-->
-        <link href="https://api.tiles.mapbox.com/mapbox-gl-js/v1.1.1/mapbox-gl.css" rel="stylesheet">
-
-        <!-— facebook open graph tags -->
-        <meta property="og:url" content="http://kepler.gl/" />
-        <meta property="og:title" content="Large-scale WebGL-powered Geospatial Data Visualization Tool" />
-        <meta property="og:description" content="Kepler.gl is a powerful web-based geospatial data analysis tool. Built on a high performance rendering engine and designed for large-scale data sets." />
-        <meta property="og:site_name" content="kepler.gl" />
-        <meta property="og:image" content="https://d1a3f4spazzrp4.cloudfront.net/kepler.gl/kepler.gl-meta-tag.png" />
-        <meta property="og:image:type" content="image/png" />
-        <meta property="og:image:width" content="800" />
-        <meta property="og:image:height" content="800" />
-
-        <!-— twitter card tags -->
-        <meta name="twitter:card" content="summary_large_image">
-        <meta name="twitter:site" content="@uber">
-        <meta name="twitter:creator" content="@uber">
-        <meta name="twitter:title" content="Large-scale WebGL-powered Geospatial Data Visualization Tool">
-        <meta name="twitter:description" content="Kepler.gl is a powerful web-based geospatial data analysis tool. Built on a high performance rendering engine and designed for large-scale data sets.">
-        <meta name="twitter:image" content="https://d1a3f4spazzrp4.cloudfront.net/kepler.gl/kepler.gl-meta-tag.png" />
+        <link href="css/mapbox-gl.css" rel="stylesheet">
 
         <!-- Load React/Redux -->
-        <script src="https://unpkg.com/react@16.8.4/umd/react.production.min.js" crossorigin></script>
-        <script src="https://unpkg.com/react-dom@16.8.4/umd/react-dom.production.min.js" crossorigin></script>
-        <script src="https://unpkg.com/redux@3.7.2/dist/redux.js" crossorigin></script>
-        <script src="https://unpkg.com/react-redux@5.1.1/dist/react-redux.min.js" crossorigin></script>
-        <script src="https://unpkg.com/styled-components@4.1.3/dist/styled-components.min.js" crossorigin></script>
+        <script src="js/react.production.min.js" crossorigin></script>
+        <script src="js/react-dom.production.min.js" crossorigin></script>
+        <script src="js/redux.js" crossorigin></script>
+        <script src="js/react-redux.min.js" crossorigin></script>
+        <script src="js/styled-components.min.js" crossorigin></script>
 
         <!-- Load Kepler.gl -->
-        <script src="https://unpkg.com/kepler.gl@2.0.1/umd/keplergl.min.js" crossorigin></script>
-        <script src="./_confirmed.js" crossorigin></script>
+        <script src="js/keplergl.min.js" crossorigin></script>
+        <script src="confirmed.js" crossorigin></script>
 
         <style type="text/css">
           body {margin: 0; padding: 0; overflow: hidden;}
